# CModLoader

./: .gitignore  CLoader.cpp  README.md  mod.hjson
.cache/clangd/index/: CLoader.cpp.0821CAECB2D364BD.idx
.devcontainer/: devcontainer.json
CLoader/: CLoaderTest  CMakeLists.txt  temp.sh
CLoader/include/: loader_CLoader.h
CLoader/src/: main.cpp
CLoader/src/core/: CLoader.hpp  mod.hpp  modFile.hpp  script.hpp
CLoader/src/struct/: Basics.hpp  CFS.hpp  FI.hpp  Fi.hpp  Zip.hpp  ZipFi.hpp
src/loader/: CLoader.java  main.java
